# mathslib

./: CMakeLists.txt
src/maths/: CMakeLists.txt  catmullrom.cpp  frenet_serret.cpp  general.cpp  mat4.cpp  matrix_transformations.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/maths/include/: catmullrom.hpp  frenet_serret.hpp  general.hpp  mat4.hpp  matrix_transformations.hpp  preferences.hpp  vec2.hpp  vec3.hpp  vec4.hpp
tests/: CMakeLists.txt  catmullrom_t.cpp  helper.cpp  helper.hpp  mat4_t.cpp  matrix_transformations_t.cpp  vec2_t.cpp  vec3_t.cpp  vec4_t.cpp
